[metadata]
name = multidex
version = 0.0.1
author = 0xfffangel
author_email = 0xfffangel@protonmail.com
description = A python library to work with multiple DEX based on web3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0xfffangel/multidex-python
project_urls =
    Bug Tracker = https://github.com/0xfffangel/multidex-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = multidex
python_requires = >=3.6
install_requires = 
    web3>=5.27.0
include_package_data = True

[options.package_data]
multidex = 
    abi/*.json
    configs/avalance/*.json
    configs/bsc/*.json
    configs/cronos/*.json
    configs/ethereum/*.json
    configs/fantom/*.json
    configs/moonbeam/*.json
    configs/moonriver/*.json
    configs/polygon/*.json